--- a/style.css
+++ b/style.css
@@ -83,7 +83,7 @@ ul>li{
     margin:110px 10px 10px 10px;
     font-family: 'huset';
     font-weight: 100;
-    font-size: 4em;
+    font-size: 70pt;
     text-align: center;
 }
 .subtitle{
@@ -91,6 +91,7 @@ ul>li{
     text-align: left;
 }
 .title{
+    text-transform: uppercase;
     text-align: left;
 }
 h1, h2, h3, h4, p, footer{
@@ -162,9 +163,9 @@ p{
     border-right: 0.1em solid #fff;
 }
 
-iframe{
+.map{
     width: 100%;
-    height: 50vh;
+    height: 50vw;
 }
 
 .grid{
@@ -232,25 +233,28 @@ ul{
 }
 
 #singleCon, .findus, .music{
-    border: 2px solid #fff;
-  padding: 1.5em;
+    border: 2pt solid #fff;
+  padding: 4vw;
 background-color: rgba(255,255,255, .2);
 }
 .showbtn, .showbtnt {
-    border: 1px solid #fff;
+    border: 2pt solid #fff;
+    display: inline-block;
 background-color: rgba(255,255,255, .2);
-    padding: 16px;
-    margin:0 5vw 0 5vw;
+    padding: 5px;
+    margin:0;
     font-size: 16px;
     cursor: pointer;
     color: white;
+}
+.showbtnt{
+    float: right;
 }
 .showbtn:active{
     background-color: rgba(255,255,255, .2);
 }
 
 .buttons{
-    text-align: center;
     margin:5vh 15vw 0 15vw;
 }
 /*#dropdown, #dropdowntwo {
@@ -260,22 +264,30 @@ background-color: rgba(255,255,255, .2);
 }*/
 
 .genres {
+    border: 2pt solid #fff;
+    border-top: none;
     display: none;
    /* background-color: rgba(255,255,255, .2);*/
 }
 .genres ul{
     text-align: left;
-   padding:0;
-    margin: 0 0 0 10px;
+    padding:0;
+    margin: 0;
     background-color: rgba(255,255,255, .2);
 }
 
 .genres a {
     color:white;
     padding: 8px;
-    margin:5px;
+    margin:0;
     font-size: 10pt;
     text-decoration: none;
+}
+.genre, .date{
+    margin: 0;
+}
+.venue, .price{
+    margin-bottom: 5px;
 }
 .genre{
     text-align: right;
@@ -315,9 +327,7 @@ background-color: rgba(255,255,255, .2);
   grid-template-columns: 1fr;
 }
 
-.about>h2{
-        text-align: center;
-    }
+
 .faqgrid{
 margin:0;
 }
@@ -349,6 +359,9 @@ margin:0;
     }
     .genres ul li{
 display:inline-block;
+}
+    .showbtnt, .showbtn{
+    width: 30vw;
 }
 }
 
